# jola

./: LICENSE  README.md  conftest.py  pyproject.toml  pytest.ini  tasks.py
.github/workflows/: pull_request.yml
jola/: __main__.py  utils.py
jola/analyzer/: __init__.py  untyped_relationship_field.py
jola/analyzer/tests/: test_untyped_relationship_field.py
jola/cli/: __init__.py  django_model.py  typer_cli_application.py
jola/fixer/: __init__.py  fix_untyped_relationship_field.py
jola/fixer/tests/: test_fix_untyped_relationship_field.py
jola/fixer/tests/samples/: multiline_untyped_article_user.py  untyped_relationship_field_sample.py
jola/linter/: __init__.py  untyped_relationship_field.py
jola/models/: __init__.py  relationship_field.py
