[tool.poetry]
name = "jola"
version = "0.1.0"
description = ""
authors = ["YeonGyu-Kim <code.yeon.gyu@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
jola = "jola:main"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
rich = "^13.7.0"
pytest-xdist = "^3.5.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pytest = "^7.4.3"
mypy = "^1.7.1"
pytest-rerunfailures = "^13.0"
pytest-sugar = "^0.9.7"
invoke = "^2.2.0"
pyupgrade = "^3.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119
exclude = ["samples", ".venv"]
select = [
    "F", # pyflakes
    "I", # sort imports
    "W", # pycodestyle warning
    "E", # pycodestyle error
]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
exclude = [".venv", "samples"]
